--- a/public/index.html
+++ b/public/index.html
@@ -34,12 +34,19 @@
           format("opentype");
       }
 
+      html,
       body {
         font-family: "whitney-medium", sans-serif;
-        list-style: none;
         margin: 0;
         padding: 0;
+        width: 100%;
+        height: 100%;
         overflow: hidden;
+      }
+
+      #root {
+        width: 100%;
+        height: 100%;
       }
     </style>
   </head>
