--- a/public/index.html
+++ b/public/index.html
@@ -37,11 +37,11 @@
       html,
       body {
         font-family: "whitney-medium", sans-serif;
-        margin: 0;
-        padding: 0;
         width: 100%;
         height: 100%;
         overflow: hidden;
+        margin: 0;
+        padding: 0;
       }
 
       #root {
@@ -53,5 +53,32 @@
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
+    <script
+      src="https://code.jquery.com/jquery-3.6.4.min.js"
+      integrity="sha256-oP6HI9z1XaZNBrJURtCoUT5SUnxFr8s3BzRl+cbzUq8="
+      crossorigin="anonymous"
+    ></script>
+    <script>
+      // Zoom
+      function resizeApply() {
+        var minWidth = 1920;
+        var body = document.getElementsByTagName("body")[0];
+        if (window.innerWidth < minWidth) {
+          body.style.zoom = window.innerWidth / minWidth;
+        } else {
+          body.style.zoom = 1;
+        }
+      }
+      window.onload = function () {
+        window.addEventListener("resize", function () {
+          resizeApply();
+        });
+      };
+
+      $(document).ready(function () {
+        //설정 해상도보다 낮을 때 축소
+        resizeApply();
+      });
+    </script>
   </body>
 </html>
