--- a/public/index.html
+++ b/public/index.html
@@ -39,7 +39,7 @@
         font-family: "whitney-medium", sans-serif;
         width: 100%;
         height: 100%;
-        overflow: hidden;
+        /* overflow: hidden; */
         margin: 0;
         padding: 0;
       }
