--- a/public/index.html
+++ b/public/index.html
@@ -9,34 +9,14 @@
       name="description"
       content="Web site created using create-react-app"
     />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+    <link rel="stylesheet" href="reset.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <title>React App</title>
     <style>
-      @font-face {
-        font-family: "whitney-bold";
-        src: url("/public/Font-Whitney-Sans/whitney-bold.otf")
-          format("opentype");
-      }
-      @font-face {
-        font-family: "whitney-semibold";
-        src: url("/public/Font-Whitney-Sans/whitney-semibold.otf")
-          format("opentype");
-      }
-      @font-face {
-        font-family: "whitney-light";
-        src: url("/public/Font-Whitney-Sans/whitney-light.otf")
-          format("opentype");
-      }
-      @font-face {
-        font-family: "whitney-medium";
-        src: url("/public/Font-Whitney-Sans/whitney-medium.otf")
-          format("opentype");
-      }
-
       html,
       body {
-        font-family: "whitney-medium", sans-serif;
         width: 100%;
         height: 100%;
         /* overflow: hidden; */
