--- a/public/index.html
+++ b/public/index.html
@@ -22,6 +22,7 @@
         /* overflow: hidden; */
         margin: 0;
         padding: 0;
+        box-sizing: border-box;
       }
 
       #root {
@@ -38,7 +39,7 @@
       integrity="sha256-oP6HI9z1XaZNBrJURtCoUT5SUnxFr8s3BzRl+cbzUq8="
       crossorigin="anonymous"
     ></script>
-    <script>
+    <!-- <script>
       // Zoom
       function resizeApply() {
         var minWidth = 1920;
@@ -49,6 +50,7 @@
           body.style.zoom = 1;
         }
       }
+      
       window.onload = function () {
         window.addEventListener("resize", function () {
           resizeApply();
@@ -59,6 +61,6 @@
         //설정 해상도보다 낮을 때 축소
         resizeApply();
       });
-    </script>
+    </script> -->
   </body>
 </html>
