--- a/public/index.html
+++ b/public/index.html
@@ -29,6 +29,11 @@
         width: 100%;
         height: 100%;
       }
+
+      a{
+        text-decoration: none;
+        color: inherit;
+      }
     </style>
   </head>
   <body>
