--- a/public/index.html
+++ b/public/index.html
@@ -23,6 +23,7 @@
         margin: 0;
         padding: 0;
         box-sizing: border-box;
+        cursor: default;
       }
 
       #root {
@@ -30,7 +31,7 @@
         height: 100%;
       }
 
-      a{
+      a {
         text-decoration: none;
         color: inherit;
       }
