--- a/public/index.html
+++ b/public/index.html
@@ -19,7 +19,7 @@
       body {
         width: 100%;
         height: 100%;
-        /* overflow: hidden; */
+
         margin: 0;
         padding: 0;
         box-sizing: border-box;
@@ -45,7 +45,7 @@
       integrity="sha256-oP6HI9z1XaZNBrJURtCoUT5SUnxFr8s3BzRl+cbzUq8="
       crossorigin="anonymous"
     ></script>
-    <!-- <script>
+    <script>
       // Zoom
       function resizeApply() {
         var minWidth = 1920;
@@ -67,6 +67,6 @@
         //설정 해상도보다 낮을 때 축소
         resizeApply();
       });
-    </script> -->
+    </script>
   </body>
 </html>
