--- a/public/index.html
+++ b/public/index.html
@@ -9,10 +9,11 @@
       name="description"
       content="Web site created using create-react-app"
     />
+    <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
     <link rel="stylesheet" href="reset.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <title>React App</title>
+    <title>미래의 Discord</title>
     <style>
       html,
       body {
